; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_mknod.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_mknod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.puffs_usermount = type { i32 }
%struct.puffs_newinfo = type { i32 }
%struct.puffs_cn = type { i32 }
%struct.vattr = type { i32 }
%struct.puffs_node = type { i32 }

@VBLK = common dso_local global i32 0, align 4
@VCHR = common dso_local global i32 0, align 4
@VFIFO = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dtfs_node_mknod(%struct.puffs_usermount* %0, i8* %1, %struct.puffs_newinfo* %2, %struct.puffs_cn* %3, %struct.vattr* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.puffs_usermount*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.puffs_newinfo*, align 8
  %10 = alloca %struct.puffs_cn*, align 8
  %11 = alloca %struct.vattr*, align 8
  %12 = alloca %struct.puffs_node*, align 8
  %13 = alloca %struct.puffs_node*, align 8
  store %struct.puffs_usermount* %0, %struct.puffs_usermount** %7, align 8
  store i8* %1, i8** %8, align 8
  store %struct.puffs_newinfo* %2, %struct.puffs_newinfo** %9, align 8
  store %struct.puffs_cn* %3, %struct.puffs_cn** %10, align 8
  store %struct.vattr* %4, %struct.vattr** %11, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = bitcast i8* %14 to %struct.puffs_node*
  store %struct.puffs_node* %15, %struct.puffs_node** %12, align 8
  %16 = load %struct.vattr*, %struct.vattr** %11, align 8
  %17 = getelementptr inbounds %struct.vattr, %struct.vattr* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @VBLK, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %35, label %21

21:                                               ; preds = %5
  %22 = load %struct.vattr*, %struct.vattr** %11, align 8
  %23 = getelementptr inbounds %struct.vattr, %struct.vattr* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @VCHR, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %35, label %27

27:                                               ; preds = %21
  %28 = load %struct.vattr*, %struct.vattr** %11, align 8
  %29 = getelementptr inbounds %struct.vattr, %struct.vattr* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @VFIFO, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %35, label %33

33:                                               ; preds = %27
  %34 = load i32, i32* @EINVAL, align 4
  store i32 %34, i32* %6, align 4
  br label %49

35:                                               ; preds = %27, %21, %5
  %36 = load %struct.puffs_node*, %struct.puffs_node** %12, align 8
  %37 = load %struct.puffs_cn*, %struct.puffs_cn** %10, align 8
  %38 = load %struct.vattr*, %struct.vattr** %11, align 8
  %39 = getelementptr inbounds %struct.vattr, %struct.vattr* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call %struct.puffs_node* @dtfs_genfile(%struct.puffs_node* %36, %struct.puffs_cn* %37, i32 %40)
  store %struct.puffs_node* %41, %struct.puffs_node** %13, align 8
  %42 = load %struct.puffs_node*, %struct.puffs_node** %13, align 8
  %43 = getelementptr inbounds %struct.puffs_node, %struct.puffs_node* %42, i32 0, i32 0
  %44 = load %struct.vattr*, %struct.vattr** %11, align 8
  %45 = call i32 @puffs_setvattr(i32* %43, %struct.vattr* %44)
  %46 = load %struct.puffs_newinfo*, %struct.puffs_newinfo** %9, align 8
  %47 = load %struct.puffs_node*, %struct.puffs_node** %13, align 8
  %48 = call i32 @puffs_newinfo_setcookie(%struct.puffs_newinfo* %46, %struct.puffs_node* %47)
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %35, %33
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local %struct.puffs_node* @dtfs_genfile(%struct.puffs_node*, %struct.puffs_cn*, i32) #1

declare dso_local i32 @puffs_setvattr(i32*, %struct.vattr*) #1

declare dso_local i32 @puffs_newinfo_setcookie(%struct.puffs_newinfo*, %struct.puffs_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
